# ChessV2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  ChessController.cpp  ChessController.h  Jenkinsfile  Piece.cpp  Piece.h  README.md  launch.ssh  main.cpp
.github/workflows/: cmake.yml
ChessBoard/: CMakeLists.txt
ChessBoard/include/: ChessBoard.h  ChessCollision.h  MoveRecorder.h
ChessBoard/src/: ChessBoard.cpp  ChessCollision.cpp  MoveRecorder.cpp
ChessController/: CMakeLists.txt
ChessController/include/: ChessController.h
ChessController/src/: ChessController.cpp
ChessNetwork/: CMakeLists.txt
ChessNetwork/include/: ChessNetwork.h  ClientHandler.h  IClientEvents.h
ChessNetwork/src/: ChessNetwork.cpp  ClientHandler.cpp
ChessPiece/: CMakeLists.txt
ChessPiece/include/: Bishop.h  King.h  Knight.h  NullPiece.h  Pawn.h  Piece.h  Queen.h  Rook.h
ChessPiece/src/: Bishop.cpp  King.cpp  Knight.cpp  NullPiece.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
ChessUtility/: CMakeLists.txt
ChessUtility/include/: ChessCoordinate.h  INetworkMessageListener.h
ChessUtility/src/: ChessCoordinate.cpp
Network/: CMakeLists.txt
Network/include/: Network.h
Network/src/: Network.cpp
NodeFrontEnd/: package-lock.json  package.json  readme.txt  server.js
NodeFrontEnd/lib/: chess_server.js
NodeFrontEnd/public/: index.html
NodeFrontEnd/public/javascripts/: chess.js  chess_ui.js
Pieces/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h
Pieces/include/: Bishop.h  ChessCoordinate.h  King.h  Knight.h  NullPiece.h  Pawn.h  Piece.h  Queen.h  Rook.h
Pieces/src/: Bishop.cpp  ChessCoordinate.cpp  King.cpp  Knight.cpp  NullPiece.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
React/: package-lock.json  package.json
React/src/: App.css  ChessBoard.js  api.js  index.js
frontend/: .gitignore  index.html
frontend/electron-app/: index.html  main.js  package.json  readme  webpack.config.js
frontend/electron-app/public/: index.html
frontend/electron-app/src/: App.js  index.js
frontend/electron-app/src/components/: Board.css  Board.js  Game.js  Square.css  Square.js
frontend/electron-app/src/hooks/: useChessSounds.js
test/: CMakeLists.txt  testA.cpp  testChessBoard.cpp  testInput.cpp  testKnight.cpp  testPawn.cpp  testRook.cpp
test/lib/: CMakeLists.txt
test/lib/googlemock/: CMakeLists.txt
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/cmake/: internal_utils.cmake
